--- a/jenkinsfile
+++ b/jenkinsfile
@@ -613,15 +613,21 @@ pipeline {
                                 } 
                                 echo "Congratulations on mastering the four chords G M, D M, E m, and C M! You're ready to play some great tunes!"
                             } else { 
-                                def completedChords = input(
-                                    message: "Enter the number of chords you've mastered so far (out of 4):",
-                                    parameters: [
-                                        string(name: 'COMPLETED_CHORDS', description: 'Number of mastered chords', defaultValue: '0')
-                                    ]
-                                ) as int
-                                def totalChords = 4
-                                def progress = (completedChords / totalChords) * 100
-                                echo "Chords: ${progressBar(progress as int)}"
+                                if (params.UKULELE?.toBoolean()) {
+                                    def completedChords = input(
+                                        message: "Enter the number of chords you've mastered so far (out of 4):",
+                                        parameters: [
+                                            string(name: 'COMPLETED_CHORDS', description: 'Number of mastered chords', defaultValue: '0')
+                                        ]
+                                    ) as int
+                                    def totalChords = 4
+                                    def progress = (completedChords / totalChords) * 100
+                                    echo "Chords: ${progressBar(progress as int)}"
+                                } else {
+                                    def totalChords = 4
+                                    def progress = (0 / totalChords) * 100
+                                    echo "Chords: ${progressBar(progress as int)}"
+                                }
                                 if (0 != progress && params.UKULELE?.toBoolean()){
                                     echo "You're on your way to mastering the chords! Keep practicing—it’s all about consistency."
                                 } else if (0 != progress && !params.UKULELE?.toBoolean()){
